--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit
-pandas
-numpy
-scikit-learn==1.4.2
-joblib
-matplotlib
-seaborn
-lime
+streamlit==1.45.1
+pandas==2.2.3
+numpy==1.26.3
+scikit-learn==1.3.2
+joblib==1.4.2
+matplotlib==3.10.3
+seaborn==0.13.2
+lime==0.2.0.1
+streamlit-option-menu==0.3.6
